<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/biometric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="30dp"
            android:text="@string/use_biometrics" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/signInSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social_login" />

        <Button
            android:id="@+id/getProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_profile"
            android:visibility="gone" />

        <Button
            android:id="@+id/signOutOfOkta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_of_okta"
            android:visibility="gone" />

        <Button
            android:id="@+id/signOutAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_all"
            android:visibility="gone" />

        <Button
            android:id="@+id/refreshToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh_token"
            android:visibility="gone" />

        <Button
            android:id="@+id/clearData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_data"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="status"
            tools:visibility="visible" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/cancel"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>
</ScrollView>
